--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
     </style>
     <body>
         <h1>Convert V2ray Links to Clash Config</h1>
-        <textarea id="v2ray-links" wrap="off" placeholder="Paste your V2ray links here..."></textarea>
+        <textarea id="v2ray-links" wrap="off" placeholder="Paste your V2ray links or subscription url here..."></textarea>
         <button id="convert-btn">Convert</button>
         <textarea id="clash-config" wrap="off" placeholder="Converted Clash Config will be displayed here..." readonly></textarea>
     </body>
@@ -56,6 +56,11 @@
             convertBtn.textContent = "Converting...";
             const apiUrl = getApiUrl();
             const v2rayLinksText = v2rayLinks.value;
+            if (v2rayLinksText.startsWith("http")) {
+                window.open(apiUrl + "?sub:" + v2rayLinksText);
+                convertBtn.textContent = "Convert";
+                return;
+            }
             fetch(apiUrl, {
                 method: "POST",
                 headers: {
